<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".movetasktoback.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/supermethod">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/behavior_prompt"/>

        <RadioButton
            android:id="@+id/supermethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_onbackpressed"/>

        <RadioButton
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manually_finish"/>

        <RadioButton
            android:id="@+id/moveTaskToBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movetasktoback"/>

        <CheckBox
            android:id="@+id/parameter"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameter_prompt"/>
    </RadioGroup>

    <View
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#929292"/>

    <CheckBox
        android:id="@+id/startupChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startup_prompt"/>

</LinearLayout>
